// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`activeClass options 1`] = `
Object {
  "Constructor": "LinkToWidget",
  "Options": Object {
    "ID": "widget",
    "activeClass": "test-active",
    "className": "",
    "containerSelector": "body",
    "directives": Object {
      "onclick": [Function],
      "ref": [Function],
    },
    "params": Object {},
    "path": "base",
    "text": "",
    "types": Array [],
    "useActiveClass": true,
  },
  "html": "
<a href=\\"/base\\" class=\\"test-active\\">
  <!--default-->
</a>
",
}
`;

exports[`className option & useActiveClass & activeClass 1`] = `
Object {
  "Constructor": "LinkToWidget",
  "Options": Object {
    "ID": "widget",
    "activeClass": "test-active",
    "className": "foo",
    "containerSelector": "body",
    "directives": Object {
      "onclick": [Function],
      "ref": [Function],
    },
    "params": Object {},
    "path": "base",
    "text": "",
    "types": Array [],
    "useActiveClass": true,
  },
  "html": "
<a href=\\"/base\\" class=\\"foo test-active\\">
  <!--default-->
</a>
",
}
`;

exports[`className option 1`] = `
Object {
  "Constructor": "LinkToWidget",
  "Options": Object {
    "ID": "widget",
    "activeClass": "active",
    "className": "foo bar",
    "containerSelector": "body",
    "directives": Object {
      "onclick": [Function],
      "ref": [Function],
    },
    "params": Object {},
    "path": "base",
    "text": "Base page",
    "types": Array [],
    "useActiveClass": false,
  },
  "html": "
<a href=\\"/base\\" class=\\"foo bar\\">Base page
  <!--default-->
</a>
",
}
`;

exports[`click 1`] = `
Object {
  "Constructor": "LinkToWidget",
  "Options": Object {
    "ID": "widget",
    "activeClass": "active",
    "className": "",
    "containerSelector": "body",
    "directives": Object {
      "onclick": [Function],
      "ref": [Function],
    },
    "params": Object {},
    "path": "base",
    "text": "",
    "types": Array [],
    "useActiveClass": false,
  },
  "html": "
<a href=\\"/base\\" class=\\"\\">
  <!--default-->
</a>
",
}
`;

exports[`destroy 1`] = `
Object {
  "Constructor": "LinkToWidget",
  "Options": Object {
    "ID": "widget",
    "activeClass": "active",
    "className": "",
    "containerSelector": "body",
    "directives": Object {
      "onclick": [Function],
      "ref": [Function],
    },
    "params": Object {},
    "path": "base",
    "text": "Base page",
    "types": Array [],
    "useActiveClass": false,
  },
  "html": "
<a href=\\"/base\\" class=\\"\\">Base page
  <!--default-->
</a>
",
}
`;

exports[`params options 1`] = `
Object {
  "Constructor": "LinkToWidget",
  "Options": Object {
    "ID": "widget",
    "activeClass": "active",
    "className": "",
    "containerSelector": "body",
    "directives": Object {
      "onclick": [Function],
      "ref": [Function],
    },
    "params": Object {
      "id": 1,
    },
    "path": "base",
    "text": "",
    "types": Array [],
    "useActiveClass": false,
  },
  "html": "
<a href=\\"/base/1\\" class=\\"\\">
  <!--default-->
</a>
",
}
`;

exports[`remove 1`] = `
Object {
  "Constructor": "LinkToWidget",
  "Options": Object {
    "ID": "widget",
    "activeClass": "active",
    "className": "",
    "containerSelector": "body",
    "directives": Object {
      "onclick": [Function],
      "ref": [Function],
    },
    "params": Object {},
    "path": "base",
    "text": "Base page",
    "types": Array [],
    "useActiveClass": false,
  },
  "html": "",
}
`;

exports[`render correctly 1`] = `
Object {
  "Constructor": "LinkToWidget",
  "Options": Object {
    "ID": "widget",
    "activeClass": "active",
    "className": "",
    "containerSelector": "body",
    "directives": Object {
      "onclick": [Function],
      "ref": [Function],
    },
    "params": Object {},
    "path": "base",
    "text": "Base page",
    "types": Array [],
    "useActiveClass": false,
  },
  "html": "
<a href=\\"/base\\" class=\\"\\">Base page
  <!--default-->
</a>
",
}
`;

exports[`useActiveClass options 1`] = `
Object {
  "Constructor": "LinkToWidget",
  "Options": Object {
    "ID": "widget",
    "activeClass": "active",
    "className": "",
    "containerSelector": "body",
    "directives": Object {
      "onclick": [Function],
      "ref": [Function],
    },
    "params": Object {},
    "path": "base",
    "text": "",
    "types": Array [],
    "useActiveClass": true,
  },
  "html": "
<a href=\\"/base\\" class=\\"active\\">
  <!--default-->
</a>
",
}
`;
